<resources>

    <string name="PREFERENCES_KEY" translatable="false">com.singlevoid.caterina.PREFERENCES</string>
    <string name="PREFERENCE_THEME" translatable="false">PREFERENCE_THEME</string>
    <string name="PHOTOGRAPH_EXTRA_MESSAGE" translatable="false" >com.singlevoid.caterina.detail.PHOTOGRAPH</string>
    <string name="preference_permission" translatable="false">PERMISSION_KEY</string>
    <string name="base_url" translatable="false">http://www.reviumanresa.cat</string>

    <string name="empty_title">Unknown Title</string>
    <string name="content_description_empty_image">Unknown image description</string>
    <string name="empty_author">Unknown author</string>
    <string name="empty_source">Unknown source</string>
    <string name="empty_date">Unknown date</string>
    <string name="empty_distance">Unknown distance</string>
    <string name="empty_tag">Unknown tag</string>

    <string name="app_name">Reviu Manresa</string>
    <string name="title_home">Near</string>
    <string name="title_dashboard">Map</string>
    <string name="title_notifications">Photographs</string>

    <string name="loading_photographs">Loading Photographs</string>

    <string name="share">Share</string>
    <string name="explore">Show on map</string>
    <string name="download">Download</string>
    <string name="fullscreen">full screen</string>


    <string name="distance"> %1$d m</string>
    <string name="open_browser">Open in browser</string>
    <string name="near_permission">Location permission must be allowed to show you photographs near you</string>
    <string name="near_empty">There are no photographs at less  than %1$d  meters from you</string>
    <string name="title_settings">Settings</string>
    <string name="theme_settings">Choose theme</string>
    <string name="settings_theme_default">System default</string>
    <string name="settings_theme_dark">Dark theme</string>
    <string name="settings_theme_light">Light theme</string>
    <string name="allow">Allow</string>
    <string name="apply_filter">Apply filter</string>
    <string name="filters">Filters</string>
    <string name="location">Location</string>
    <string name="filter_default_geolocalized">All</string>
    <string name="filter_only_geolocalized">Geolocated</string>
    <string name="filter_only_non_localized">No Geolocated</string>
    <string name="description_back">Go back to filters</string>
    <string name="sort">Sort</string>
    <string name="tags">Tags</string>
    <string name="reset">Reset</string>
    <string name="authors">Authors</string>
    <string name="search_hint">Search…</string>
    <string name="filter_mode">Filter mode</string>
    <string name="close">Close</string>

    <plurals name="location">
        <item quantity="one">Location</item>
        <item quantity="other">%d Location</item>
    </plurals>

    <plurals name="tags">
        <item quantity="one">Tags</item>
        <item quantity="other">%d Tags</item>
    </plurals>

    <plurals name="authors">
        <item quantity="one">Authors</item>
        <item quantity="other">%d Authors</item>
    </plurals>
    <string name="match_all">Match all</string>
    <string name="match_any">Match any</string>
    <string name="show_near">Show photographs at</string>
    <string name="show_near_me">"meters "</string>
    <string name="filter_all">All</string>
    <string name="content_description_close">Cose</string>
    <string name="content_description_source">Source of the photograph</string>
    <string name="content_description_author">Author of the photograph</string>
    <string name="content_description_date">Date of the photograph</string>
    <string name="empty_description">This photograph has no description</string>
    <string name="content_description_back">Go back</string>
    <string name="content_description_share">Share photograph</string>
    <string name="content_description_download">Download photograph</string>
    <string name="content_description_browse">Open photograph on browser</string>
    <string name="content_description_open_filter">Open filter</string>
    <string name="content_description_option_status">Option status</string>
    <string name="content_description_search">Search photograph</string>
    <string name="content_description_clear_search_bar">Clear search bar</string>
    <string name="distance_in_meters">Distance in meters</string>

</resources>