<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">


    <fragment
        android:id="@+id/navigation_home"
        android:name="com.singlevoid.caterina.ui.main.near.NearFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_near" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_collection"
            app:destination="@id/navigation_collection"
            app:popUpTo="@id/navigation_map" />
    </fragment>

    <fragment
        android:id="@+id/navigation_map"
        android:name="com.singlevoid.caterina.ui.main.map.MapFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_map" >
        <argument
            android:name="Latitude"
            app:argType="float"
            android:defaultValue="0.0" />
        <argument
            android:name="Longitude"
            app:argType="float"
            android:defaultValue="0.0" />
    </fragment>

    <fragment
        android:id="@+id/navigation_collection"
        android:name="com.singlevoid.caterina.ui.main.photographs.PhotographsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_collection" >
        <action
            android:id="@+id/action_navigation_notifications_to_navigation_map"
            app:destination="@id/navigation_map"
            app:popUpTo="@id/navigation_map"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.singlevoid.caterina.ui.main.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>