<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/filter_authors_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:windowBackgroundFallback">

    <View
        android:id="@+id/filter_authors_divider_bottom"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="?android:colorEdgeEffect"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filters_author_mode_container" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/filters_author_mode_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filter_authors_mode">

        <com.singlevoid.caterina.ui.filters.FilterModeView
            android:id="@+id/filter_author_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/filter_authors_divider_top"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="?android:colorEdgeEffect"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filter_authors_text" />

    <ImageView
        android:id="@+id/filter_authors_back"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:background="@color/transparent"
        android:contentDescription="@string/content_description_back"
        app:layout_constraintBottom_toBottomOf="@+id/filter_authors_text"
        app:layout_constraintEnd_toStartOf="@+id/filter_authors_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/filter_authors_text"
        app:srcCompat="@drawable/ic_arrow_back_black_24dp"
        app:tint="?android:textColor" />

    <TextView
        android:id="@+id/filter_authors_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/reset"
        android:text="@string/reset"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/filter_authors_text"
        app:layout_constraintEnd_toStartOf="@+id/filter_authors_close"
        app:layout_constraintStart_toEndOf="@+id/filter_authors_text"
        app:layout_constraintTop_toTopOf="@+id/filter_authors_text"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/filter_authors_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:text="@string/authors"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/filter_authors_reset"
        app:layout_constraintStart_toEndOf="@+id/filter_authors_back"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/filter_authors_recycler"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filter_authors_divider_bottom" />

    <ImageView
        android:id="@+id/filter_authors_close"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/content_description_close"
        app:layout_constraintBottom_toBottomOf="@+id/filter_authors_reset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/filter_authors_reset"
        app:srcCompat="@drawable/ic_close_black_24dp"
        app:tint="?android:textColor" />

    <TextView
        android:id="@+id/filter_authors_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/filter_mode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filter_authors_divider_top" />

</androidx.constraintlayout.widget.ConstraintLayout>