<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/item_collection_list_item_constraint_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?android:windowBackgroundFallback">

    <androidx.cardview.widget.CardView
        android:id="@+id/item_collection_list_item_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        app:cardBackgroundColor="?android:attr/windowBackground"
        app:cardCornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/item_collection_list_item_card_view_constraint_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <com.github.chrisbanes.photoview.PhotoView
                android:id="@+id/item_collection_list_item_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:contentDescription="@string/content_description_empty_image"
                app:layout_constraintBottom_toTopOf="@+id/item_collection_list_item_text_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/avatars" />


            <TextView
                android:id="@+id/item_collection_list_item_text_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/empty_title"
                android:textAlignment="viewStart"
                android:textColor="?android:attr/textColor"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/item_collection_list_item_image" />

            <TextView
                android:id="@+id/item_collection_list_item_text_distance"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="8dp"
                android:text="@string/empty_distance"
                android:textColor="?android:attr/textColorHint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/item_collection_list_item_text_title" />

            <TextView
                android:id="@+id/item_collection_list_item_text_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/item_collection_list_item_text_distance" />

            <View
                android:id="@+id/detail_photograph_divider_top"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="?android:windowBackgroundFallback"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/item_collection_list_item_text_description" />

            <ImageButton
                android:id="@+id/item_collection_list_item_button_explore"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:background="?android:windowBackground"
                android:contentDescription="@string/explore"
                android:tint="?android:textColor"
                app:layout_constraintEnd_toStartOf="@+id/item_collection_list_item_button_share"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/detail_photograph_divider_top"
                app:srcCompat="@drawable/ic_explore_black_24dp" />

            <ImageButton
                android:id="@+id/item_collection_list_item_button_share"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="8dp"
                android:background="?android:windowBackground"
                android:contentDescription="@string/share"
                android:tint="?android:textColor"
                app:layout_constraintEnd_toStartOf="@+id/item_collection_list_item_button_browser"
                app:layout_constraintStart_toEndOf="@+id/item_collection_list_item_button_explore"
                app:layout_constraintTop_toBottomOf="@+id/detail_photograph_divider_top"
                app:srcCompat="@drawable/ic_share_black_24dp" />

            <ImageButton
                android:id="@+id/item_collection_list_item_button_browser"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:background="?android:windowBackground"
                android:contentDescription="@string/open_browser"
                android:tint="?android:textColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/item_collection_list_item_button_share"
                app:layout_constraintTop_toBottomOf="@+id/detail_photograph_divider_top"
                app:srcCompat="@drawable/ic_open_in_new_black_24dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>